tests/snapshots/flatten_fields-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
company_name=Acme%20Corp&
street=456%20Business%20Ave&
city=Metropolis&
zip=67890&
employee_count=100
