tests/snapshots/flatten_fields.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
name=Alice&
age=30&
street=123+Main+St&
city=Springfield&
zip=12345
