tests/snapshots/flatten_fields@form-2.snap
---
source: tests/test_roundtrip.rs
description: "Company { company_name: \"Acme Corp\", headquarters: Address { street: \"456 Business Ave\", city: \"Metropolis\", zip: \"67890\" }, employee_count: 100 }"
---
company_name=Acme%20Corp&
street=456%20Business%20Ave&
city=Metropolis&
zip=67890&
employee_count=100
