tests/snapshots/flatten_fields@query-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
company_name=Acme+Corp&
street=456+Business+Ave&
city=Metropolis&
zip=67890&
employee_count=100
