tests/snapshots/flatten_fields@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
name=Alice&
age=30&
street=123+Main+St&
city=Springfield&
zip=12345
