tests/snapshots/flatten_map-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
color=blue&
custom_field=custom_value&
id=42&
name=Widget&
size=large
