tests/snapshots/flatten_map.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
color=blue&
custom_field=custom_value&
id=42&
name=Widget&
size=large
