tests/snapshots/flatten_map@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
color=blue&
custom_field=custom_value&
id=42&
name=Widget&
size=large
