tests/snapshots/flatten_map@query.snap
---
source: tests/test_roundtrip.rs
description: "WithFlattenedMap { id: 42, name: \"Widget\", extra: {\"color\": \"blue\", \"custom_field\": \"custom_value\", \"size\": \"large\"} }"
---
color=blue&
custom_field=custom_value&
id=42&
name=Widget&
size=large
