tests/snapshots/helper_attributes-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
comma_values=apple%2Cbanana%2Ccherry&
pipe_values=1%7C2%7C3%7C4%7C5&
space_values=hello%20world&
dot_values=10.20.30&
normal_vec[0]=normal&
normal_vec[1]=array
