tests/snapshots/helper_attributes-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
comma_values=&
pipe_values=&
space_values=&
dot_values=&
normal_vec=
